[project]
name = "truthfulness-agent"
version = "0.1.0"
description = "Multi-agent truthfulness classifier built on Google ADK 2.0."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "a2a-sdk[http-server]>=0.3.0,<1.0.0",
    "mcp>=1.2.0",
    # pandas + scikit-learn are imported at MCP startup via DatasetService,
    # so they must live in base deps — not the notebook extra.
    "pandas>=2.2",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
notebook = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "missingno>=0.5",
    "jupyterlab>=4.0",
    "shap>=0.46",
]
